# doko_mc_ai

./: .clang-format  .clangd  .gitignore  .vimrc  CMakeLists.txt  Doxyfile  Makefile  README.md  core.c  core.h  example.game  game.c  game.cpp  game.h  game.hpp  main.c  main.cpp  mc.c  mc.h  profile_lib_doko.sh  random.c  random.cpp  random.h  random.hpp  utility.cpp  utility.hpp
docs/: analysis_8c__incl.map  analysis_8c__incl.md5  analysis_8h__dep__incl.md5  analysis_8h__incl.map  analysis_8h__incl.md5  analysis_8h_source.html  annotated.html  annotated_dup.js  core_8c.html  core_8c.js  core_8c__incl.map  core_8c_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  group__analysis.html  group__analysis.js  group__analysis_structInputInfo.js  group__core.html  group__core.js  group__mc.js  group__random.js  index.html  log_8c__incl.md5  log_8h.html  log_8h_source.html  main_8c.js  main_8c__incl.md5  mc_8c.js  mc_8c__incl.md5  mc_8h.html  mc_8h.js  mc_8h__dep__incl.map  mc_8h__dep__incl.md5  (+16 more)
examples/: example.prot  g1.game  test.jsonrpc
protocol/: CMakeLists.txt  error.cpp  error.hpp  interface.cpp  interface.hpp  spec.md
pydoko/: frontend.py  main.py
src/: CMakeLists.txt  Makefile  ab.c  ab.h  analysis.c  analysis.h  apollo.cpp  ares.cpp  common.hpp  core.c  core.h  g0.game  ismcts.c  ismcts.h  log.c  log.h  main.c  mc.c  mc.h  poseidon.cpp  random.c  random.h  simulate.c  simulate.h  test.c  tree.c
(+169 files in other folders)
